rename depositaddress to external address as they should support withdrawals too (#191)
* rename depositaddress to external address as they should support withdrawals too

* turn auto api generation back off (maybe it could stay on eventually...)
